tests/fail/namespace-att3.dit
A {
    String value;
}

B {
    A a;
}

C {
    String value;
}

C c;

B b;

b.a = c;
